Upgrade to Spring Boot 3.4.3, fix bugs, and improve error handling
Modernize dependencies (Spring Boot 3.4.3, MapStruct 1.6.3, mysql-connector-j,
maven-compiler-plugin 3.13.0), migrate javax.persistence to jakarta.persistence,
and remove deprecated hibernate.dialect config.

Fix delete dish endpoint (missing @PathVariable), fix updateMenu not persisting
changes, and implement deleteMenu (clears meals instead of deleting).

Add GlobalExceptionHandler for consistent JSON error responses, remove try/catch
from controllers, centralize CORS in WebConfig, switch to constructor injection,
and fix misc code issues (typos, unused imports, null enum handling).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>